# AdventOfCode

./: .gitmodules  .pre-commit-config.yaml  pyproject.toml
adventofcode/: main.py
adventofcode/puzzles/2024/: 01.py  02.py  03.py
